Moved Javadoc to RAMCloud wiki, modified Java bindings to use shared ByteBuffer
 - Moved Javadoc to https://ramcloud.stanford.edu/docs/javadoc/
 - Most Java bindings now used a shared memory location with C++
   - Read down to ~0.25 us difference from C++
   - Write down to ~0.2 us difference from C++
   - Multiops down to ~0.25 us difference per object from C++
 - Chaged RejectRules C++ struct to be packed
 - Added unit tests for MultiOpHandler classes
 - Updated Status.h instructions for update Java bindings